--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: rust
 cache: cargo
-sudo: false
+sudo: true
 branches: master
 os: -linux
 git:
@@ -15,6 +15,7 @@ addons:
     - libasound2-dev
 name: "q-moose"
 before_script:
+- sudo apt install libasound2-dev
 - cargo update
 script:
 - cargo build --release --features="libc glium winit" --verbose --all
