--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ language: rust
 
 cache: cargo
 
-sudo: false
+sudo: true
 
 branches: master
 
@@ -22,7 +22,7 @@ name: "q-moose"
 
 before_script:
 - cargo update
-- apt-get install libasound2-dev
+- sudo apt-get install libasound2-dev
 
 script:
 - cargo build --release --features="libc glium winit" --verbose --all
